--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -323,9 +323,9 @@ The CRR is a framework for validating conceptual design requirements against CAA
 The goal of the CRR is to build a computational framework that represents and reasons about design requirements in the context of conceptual design requirement validation.     
 
 \section{Design Problem}
-The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function (i.e., architectural design) from multiple levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. The semantics at the conceptual level included high level architectural concepts such as continuity, enclosure, privacy, and visibility, and spatial qualities of orientation, positioning, and proximity, while the semantics at the quantitative level involve general spatial primitives of polygons, lines, and points. The qualitative intermediate layer involves qualitative spatial representation and reasoning. These three levels of design abstraction are referred to as the architectural design hierarchy. The levels are connected to each other because abstract conceptual features emerge from specific low level spatial spatial design patterns at the quantitative level. 
+The field of Spatial Computing for Architectural Design \cite{bhatt-spatial-computing} investigates the computation apparatus that is necessary to represent and reasoning about architectural form and function from multiple levels of abstraction: \emph{conceptual}, \emph{qualitative}, and \emph{quantitative}. The semantics at the conceptual level included architectural concepts such as continuity, enclosure, privacy, and visibility, and spatial qualities of orientation, positioning, and proximity, while the semantics at the quantitative level involve general spatial primitives of polygons, lines, and points. The semantics of the qualitative level, the intermediating layer, involve qualitative spatial relationships. The three levels of the design abstraction are referred to in this thesis as the architectural design hierarchy, in which the top level of the hierarchy corresponds to the conceptual, the middle level corresponds to the qualitative, and the bottom level corresponds to the quantitative. The levels are connected to each other because conceptual features at the top level emerge from spatial design patterns at the bottom level. 
 
-Take for example the architectural concept of spaciousness. At the conceptual level, spaciousness conveys an experiential quality of the design such as the feeling of openness. Such experiential qualities emerge from of the specific spatial patterns of the architectural elements that make up the building's physical form. In other words, the location of architectural entities such as walls, ceilings, windows, and doors, and the size and shape of rooms directly affect the experiential quality of openness. In general, changes in the spatial patterns at the quantitative level affect the experiential qualities of the design at the conceptual level. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level via spatial patterns on the qualitative level. 
+Take for example the architectural concept of spaciousness. At the conceptual level, spaciousness conveys an experiential quality of the design such as the feeling of openness. Such an experiential quality emerges from of the spatial design patterns of the building's physical form. In other words, the location and placement of architectural entities such as walls, ceilings, windows, and doors, and their spatial relationships as they define the size and shape of rooms and spaces, directly affect the experiential quality of openness. In general, changes in the spatial patterns at the quantitative level affect the experiential qualities of the design at the conceptual level. Figure \ref{multi-perspective-reps} illustrates this concept in which the features of the design at the conceptual level emerges from its spatial environment at the quantitative level via spatial patterns on the qualitative level. 
 
 \begin{figure}[t]
 \centering
@@ -334,22 +334,18 @@ Take for example the architectural concept of spaciousness. At the conceptual le
 \label{multi-perspective-reps}
 \end{figure}
 
-Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} are incapable of reasoning at the conceptual level. This happens because the underlying design representation model in CAAD-based systems is encapsulated on the quantitative level of the architectural design hierarchy, which lacks the semantics necessary for reasoning at higher levels of abstraction. 
+Unfortunately, current state-of-the-art CAAD programs \cite{ArchiCAD} \cite{AutoCAD} do not support the representation of and reasoning about architectural design from a conceptual level. This happens because the CAAD-based design representation model is encapsulated at the quantitative level of the architectural design hierarchy, which lacks the design and spatial semantics necessary for representation and reasoning at higher levels of abstraction. 
 
-While this design representation model is well suited for certain design phases, such as designing a schematization that will be used as a blueprint for the realization of the design, it does not support other architectural design processes that require reasoning at a higher level of abstraction, such as design conceptualization, requirements reasoning and functional specification to name a few \cite{bhatt-spatial-computing}. 
-
-Take for example, the tasks an architect might face during the design conceptualization phase of a museum include, among other things, defining high level functional and aesthetic requirements of the museum's design, such as the following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplify:
+While the design representation model of CAAD-based systems is well suited for certain design phases, such as the building of a schematization that will be used as a blueprint for the realization of the design, it does not support other architectural design processes that require reasoning at a higher level of abstraction, such as design conceptualization, requirements reasoning and functional specification to name a few \cite{bhatt-spatial-computing}. Take for example, the tasks an architect might face during the design conceptualization phase of a museum, including, among other things, defining high level functional and aesthetic requirements of the museum's design. The following descriptions of the \emph{Museu Calouste Gulbenkian} in Lisbon, Portugal exemplifies this phase:
 \begin{quote}
 \emph{``The current topographic conditions of the site, where the larger trees are located in an area that is more elevated than the whole northern rim of the plot, made it possible to install a huge underground floor in the already existing depression, whose covering creates a gentle artificial elevation that perspectively accentuates and enhances the whole architectural composition. The distribution of the construction volumes fundamentally followed a desire for horizontality, allowing one to read the continuity of the green space beyond the construction and in all directions.''}
 \end{quote}
 \begin{quote}
 \emph{``This sober, rational and markedly horizontal structure is distinctive for its laminar exterior, its modular repetition, austere design and the hard quality of the materials which shape it, concrete and glass.''}
 \end{quote}
-Environmental aspects of the museums design, such as these expressed in the above description, encompass high level spatial design patterns that are defined at the design conceptualization phase. Because CAAD-based systems do not represent the design semantics at a level of abstraction that is required to express these conceptualization, it is therefore incapable of providing the designer with assistance at the conceptual level.
+Environmental aspects of the museums design, such as these expressed in the above description, encompass high level spatial design patterns that are defined at the design conceptualization phase. Because CAAD-based systems do not represent the design semantics at a level of abstraction that is required to express these conceptualization, it is therefore incapable of providing the designer with assistance during the conceptualization phase of the design process.
 
-Design reasoning at a conceptual level of abstraction, such as the example above, requires the underlying model representation semantics at the same level of abstraction. In this regard, the design semantics at the conceptual level involve abstractions over architectural entities such as \emph{room}, \emph{floor}, \emph{building}, \emph{door}, and \emph{wall}, along with the relationships they share between each other, both spatially, \emph{facing}, \emph{near-to}, \emph{across-from}, \emph{connected-to}, and non-spatially, \emph{material composition}, \emph{lighting attributes}, and \emph{load bearing qualities}. Conversely, the underlying model representation semantics of CAAD-based system are based on spatially general and low level geometric primitives of points, lines, and polygons. Where as an architect might conceptualize the design of a museum in terms such as \emph{galleries} and the relative placement of objects within each gallery, e.g., ``the statue is on the \emph{left-hand-side} of the gallery as one enters from the main doors'', the process of building the museum in a CAAD-based tool restricts the architect to using points, lines and polygons. 
-
-%is restricted to the representation of the design in terms of it's geometric characteristics. 
+Design reasoning at a conceptual level of abstraction, such as the example above, requires the underlying model representation semantics at the same level of abstraction. In this regard, the design semantics at the conceptual level involve abstractions over architectural entities such as rooms, floors, buildings, doors, and walls, along with the relationships they share between each other, both spatially, facing, near-to, across-from, connected-to, and non-spatially, material composition, lighting attributes, and load bearing qualities. Conversely, the underlying model representation semantics of CAAD-based system are based on spatially general and low level geometric primitives of points, lines, and polygons that lack the notions at the higher levels of spatial and design abstraction. Where as an architect might conceptualize the design of a museum in terms such as galleries and the relative placement of objects within each gallery, e.g., ``the statue is on the \emph{left-hand-side} of the gallery as one enters from the main doors'', the process of building the museum in a CAAD-based tool restricts the architect to using points, lines and polygons. 
 
 The \emph{spatial gap} exemplified here, is the crux of the problem being addressed in this thesis. The following section introduces the scope of this thesis by narrowing it to focus on conceptual requirements reasoning, it outlines the approaches taken towards this goal, and presents the thesis's main contributions. 
 
@@ -362,20 +358,21 @@ The \emph{spatial gap} exemplified here, is the crux of the problem being addres
 
 
 \section{Scope and Contributions}
-The objective of this thesis is an initial step towards building a framework that bridges the gap between a design's conceptual features to its quantitative representation (i.e., CAAD-based model). Specifically, the framework, referred to as the Conceptual Requirements Reasoner or CRR, does this in the context of conceptual requirements validation. Conceptual requirements validation involves checking that the underlying spatial structures of a design, in the quantitative space, are consistent with its conceptual features as they are characterized spatially. Towards this objective the following issues have been identified as crucial:
+The objective of this thesis is an initial step towards building a framework that bridges the gap between a design's conceptual features to its real world quantitative representation (i.e., CAAD-based model). Specifically, the framework, referred to as the Conceptual Requirements Reasoner or CRR, does this in the context of conceptual requirements validation. Conceptual requirements validation involves checking that the underlying spatial structures of a design, in the quantitative representation, are consistent with its conceptual features as they are defined by a designer / architect. Towards this goal the following objectives have been identified as crucial:
 \begin{itemize}
-\item the identification, formal modeling, and spatial interpretation of architectural concepts and spatial qualities 
-\item the spatial qualification of CAAD-based architectural representation models, and
-\item the defining of conceptual requirements to qualitative spatial design patterns 
+\item the identification, formal modeling, and spatial interpretation of architectural concepts
+\item the spatial abstraction and qualification of CAAD-based quantitative models, and
+\item the use of qualitative spatial representation and reasoning techniques to connect high level concepts to low level spatial quantities  
 \end{itemize}
 
-To address these issues, this thesis follows the approach introduced by Bhatt and Freksa \cite{bhatt-spatial-computing}, with regards to Spatial Computing for Architectural Design. This thesis does so by following the design space hierarchy as illustrated in Figure \ref{multi-perspective-reps}, in implementing a framework for validating conceptual requirements against a work-in-progress design. The main contributions in this respect are identified here:
+To address these objectives, this thesis follows the approach introduced by Bhatt and Freksa \cite{bhatt-spatial-computing}, with regards to Spatial Computing for Architectural Design. This thesis does so by following the design space hierarchy as illustrated in Figure \ref{multi-perspective-reps}, in implementing a framework for validating conceptual requirements against a work-in-progress design. The main contributions in this respect are identified here:
 \begin{itemize}
-\item the implementation of a framework that validates conceptual design requirements against work-in-progress architectural designs
-\item the development of a multi-hierarchy that maps architectural concepts at the conceptual level to spatial patterns in the quantitative level
-\item the use of formal qualitative spatial representation and reasoning techniques to bridge the gap between each level of the design hierarchy
+\item the implementation of a framework that validates conceptual design requirements against CAAD-based quantitative architectural models
+\item the development of a multi-hierarchy that maps architectural concepts at the conceptual level to spatial patterns in the qualitative level
+\item the implementation of spatial constraint solvers for the qualification of CAAD-based quantitative models
 \end{itemize}
- 
+
+The following section introduces the high level design and implementation of the CRR with regards to the scope and contributions identified in this section. 
 
 %  - main problem: how to go from high level conceptualization of a design to low level quantitative level
 %  - solution: use intermediate spatial level: i.e. qualitative space
@@ -402,7 +399,7 @@ To address these issues, this thesis follows the approach introduced by Bhatt an
 
 
 \section{Design and Approach}
-The design of the CRR is based on the design hierarchy as illustrated in Figure \ref{hierarchy no-links}, in which the problem space for conceptual requirements reasoning is broken down into a design space, quality space, and quantitative space. The highest level of the hierarchy, the design space, represents design concepts and architectural spatial qualities that describe the design from a experiential perspective. this level of the hierarchy, design concepts are characterized based on architectural spatial qualities. For example, the concept of \emph{privacy} is characterized based on the architectural spatial qualities of facing, positioning and visibility. The quality space of the hierarchy represents the design in terms of qualitative spatial relationships of orientation, topology and distance. These qualitative spatial relationships are defined using formal qualitative spatial calculi such as the Region Connection Calculus for topological relationships, the Single Cross Calculus for extrinsic orientational relationships and the Oriented Point Relational Algebra for intrinsic orientational relationships. The quantity space of the hierarchy represents the design in terms of its precise spatial geometries. This representation is similar to what is represented in a CAAD-based system.
+The design and implementation of the CRR is based on the design hierarchy as illustrated in Figure \ref{hierarchy no-links}, in which the problem space for conceptual requirements reasoning is broken down into a design space, quality space, and quantitative space. The highest level of the hierarchy, the design space, represents the design concepts and architectural spatial qualities that describe the design from a experiential perspective. In this level of the hierarchy, design concepts are characterized based on architectural spatial qualities. For example, the concept of \emph{privacy} is characterized based on the architectural spatial qualities of facing, positioning and visibility. The middle level of the hierarchy, the quality space, represents the design based on qualitative spatial relationships of orientation, topology and distance. Qualitative spatial relationships, in the CRR, are defined using formal qualitative spatial calculi such as the Region Connection Calculus for topological relationships, the Single Cross Calculus for extrinsic orientational relationships and the Oriented Point Relational Algebra for intrinsic orientational relationships. The lowest level of the hierarchy, the quantity space, represents the design in terms of its precise spatial geometries. This representation is similar to what is represented in a CAAD-based system.
 
 \begin{figure}[t]
 \centering
@@ -411,7 +408,7 @@ The design of the CRR is based on the design hierarchy as illustrated in Figure 
 \label{hierarchy no-links}
 \end{figure}
 
-Given the three hierarchical levels of the problem space, the main issue now becomes how each level is connected to and interfaces with the other. In other words, how do design concepts in the design space map to qualitative spatial relationships in the quality space, and how do qualitative spatial relationships in the quality space map to geometric quantities in the quantity space. At the core of this problem is the qualitative spatial layer, an intermediary level that interfaces between the highest and lowest levels of the design hierarchy. 
+Given the three hierarchical levels of the design space, the main issue now becomes how each level is connected to and interfaces with each other. In other words, how do concepts in the design space map to qualitative spatial relationships in the quality space, and similarly, how do qualitative spatial relationships in the quality space map to geometric objects in the quantity space. At the core of this is the qualitative spatial level, an intermediary layer that interfaces between the highest and lowest levels of the design hierarchy. 
 
 The concepts and spatial qualities in the design space are connected to qualitative spatial relationships in the qualitative space through a process of spatially interpreting and characterizing design concepts and spatial qualities individually.  In other words, concepts in the design space are explicitly defined based on the spatial relationships at qualitative spatial level. Take for example the architectural spatial quality of positioning. One interpretation of this quality is based on extrinsic orientational spatial patterns that are based on qualitative spatial relationships. In this case, the orientational relationships of the structural form define the design's positioning qualities. Chapter \ref{conceptual requirements} goes into detail the spatial interpretation and characterization of each architectural concept and spatial quality identified in the thesis.
 
